# tiny_cnn

./: CMakeLists.txt  LICENSE  README.md  main.cpp
python/: mnist.py  mnist_cnn_pytorch.py  operatorDemo.py  testPerformance.py
src/: layer.h  loss.h  mnist.cpp  network.cpp  network.h  utils.h
src/layer/: conv.cpp  conv.h  conv_relu_max_pooling.cpp  conv_relu_max_pooling.h  max_pooling.cpp  max_pooling.h  relu.cpp  relu.h
src/loss/: mockloss.cpp  mockloss.h
